# CPPMisc

./: CMakeLists.txt  bf.txt  inp.txt
include/: boolalg.hpp  lingalg.hpp  template_ternary.hpp  tic_tac_toe.hpp
include/compiler/: ast.hpp  kaleidoscope_jit.hpp  operator.hpp  parse.hpp  type.hpp  value.hpp
src/: interp.cpp  main.cpp
src/compiler/: brainfuck.cpp  parse.cpp
